Fixing layout issues.

--- a/src-modules/org/opencms/ade/galleries/client/ui/css/gallerydialog.css
+++ b/src-modules/org/opencms/ade/galleries/client/ui/css/gallerydialog.css
@@ -1,6 +1,7 @@
 .galleryBody {
 	margin:0px;
 	padding:0px;
+	overflow: hidden;
 }
  
  
