--- a/src-modules/org/opencms/gwt/client/ui/css/toolbar.css
+++ b/src-modules/org/opencms/gwt/client/ui/css/toolbar.css
@@ -17,7 +17,7 @@
 	top: 0px;
 	position: fixed;
 	width: 100%;
-	z-index: 10000;
+	z-index: 450;
 	padding: 0px;
 	margin: 0px;
 	font-family: Verdana,Helvetica,Arial,sans-serif;
